--- a/index.njk
+++ b/index.njk
@@ -14,10 +14,14 @@ eleventyNavigation:
 					<h1>The <span>Past</span> is <span>Alive</span></h1>
 				</div>
 				<div class="caption">
-					<p class="cut_out ">Rising from the festering slime of the extreme metal underground comes <span class="cut_out_alt">Necro Cult</span>.  Through blasphemous sorcery and occult science, we bring forth the eldritch filth of our metalzine forefathers into this benighted age of technology. We spread the black gospel of metal through album reviews, reporting on local shows, and retrospectives on lesser known bands and subgenres.</p>
-					<br>
-					<br>
-					<p class="cut_out">Hail Satan!  Brothers of Steel!  Death to False Metal!</p>
+					
+					<p class="cut_out ">
+						Rising from the festering slime of the extreme metal underground comes <span class="cut_out_alt">Necro Cult</span>. Through blasphemous sorcery and occult science, we bring forth the eldritch filth of our metalzine forefathers into this benighted age of technology. We spread the black gospel of metal through album reviews, reporting on local shows, and retrospectives on lesser known bands and subgenres.
+						<br><br>
+						Hailing from the witch-haunted woods of Pennsylvania, the black magicians of our cult plague mankind with only the greatest, most blasphemous and accursed Black Metal, Death Metal, Doom and Stoner Metal, Dungeon Synth, News, Culture, Art, Interviews, Live Shows, Film, True Crime, Gross Shit, Weird Shit, Fucked Up Shit, and whatever other filth and sleaze from the world of the underground that we want to cover.
+						<br><br>
+						Join the cult, follow us on social media, and warn your local church - NECRO CULT has risen! Hail Fucking Satan.
+					</p>
 					<br><br><br>
 					<a class="cta modal_open" data-modal="newsletter_modal">Enter The Cult</a>
 				</div>
