--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    <!-- METAS -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ renderData.title or title or metadata.title }}</title>
@@ -30,9 +32,6 @@
 
       }
     </style>
-
-    <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
-    <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
 
 
   </head>
