--- a/_includes/newsletter_modal.njk
+++ b/_includes/newsletter_modal.njk
@@ -18,7 +18,7 @@
 	<form class="newsletter_form" method="post" action="https://formspree.io/mqkyzkje">
 		<div class="form_cell">
 			<label id="sign_up_1">Email Address</label>
-			<input id="sign_up_1" type="email" name="Email">
+			<input id="sign_up_1" type="email" name="Email" required >
 		</div>
 		<div class="form_cell submit">
 			
