--- a/archive.njk
+++ b/archive.njk
@@ -7,8 +7,9 @@ eleventyNavigation:
 ---
 
 
-<section class="container">
+<section class=" container">
 	<h1>Archive</h1>
+	<p>Explore the dark past… if you dare!</p>
 </section>
 
 <section class="container" style="padding-bottom: 200px;">
