--- a/index.njk
+++ b/index.njk
@@ -20,10 +20,10 @@ eleventyNavigation:
 						<br><br>
 						Hailing from the witch-haunted woods of Pennsylvania, the black magicians of our cult plague mankind with only the greatest, most blasphemous and accursed Black Metal, Death Metal, Doom and Stoner Metal, Dungeon Synth, News, Culture, Art, Interviews, Live Shows, Film, True Crime, Gross Shit, Weird Shit, Fucked Up Shit, and whatever other filth and sleaze from the world of the underground that we want to cover.
 						<br><br>
-						Join the cult, follow us on social media, and warn your local church - NECRO CULT has risen! Hail Fucking Satan.
+						Join the cult, follow us on social media, and warn your local church - <span class="cut_out_alt">Necro Cult</span> has risen! Hail Fucking Satan.
 					</p>
 					<br><br><br>
-					<a class="cta modal_open" data-modal="newsletter_modal">Enter The Cult</a>
+					<a class="cta modal_open" data-modal="newsletter_modal">Join The Cult</a>
 				</div>
 			</div>
 
