--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -141,6 +141,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tooltipster/3.3.0/js/jquery.tooltipster.min.js" integrity="sha256-lenj6loHcdfu6tFQPUHN6S2O7G2gv7yX/P9OnRc8lno=" crossorigin="anonymous"></script>
 
+  <!-- Holy Mountain scripts -->
+    <script src="https://raw.githack.com/areimel/Holy-Mountain-Dev-Enhancement-Suite/master/devkit.js"></script>
+    <script src="https://raw.githack.com/areimel/Holy-Mountain-Dev-Enhancement-Suite/master/analytics.js"></script>
+    <script src="https://github.com/areimel/Holy-Mountain-Dev-Enhancement-Suite/blob/master/accessibility.js"></script>
+
 
   <!-- Scroll Magic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js" integrity="sha256-2p2tRZlPowp3P/04Pw2rqVCSbhyV/IB7ZEVUglrDS/c=" crossorigin="anonymous"></script>
