--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -133,17 +133,18 @@
 
   
   <!-- JS Resources -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.4/headroom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.4/jQuery.headroom.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tooltipster/3.3.0/js/jquery.tooltipster.min.js" integrity="sha256-lenj6loHcdfu6tFQPUHN6S2O7G2gv7yX/P9OnRc8lno=" crossorigin="anonymous"></script>
 
   <!-- Holy Mountain scripts -->
-    <script src="https://raw.githack.com/areimel/Holy-Mountain-Dev-Enhancement-Suite/master/devkit.js"></script>
-    <script src="https://raw.githack.com/areimel/Holy-Mountain-Dev-Enhancement-Suite/master/analytics.js"></script>
-    <script src="https://github.com/areimel/Holy-Mountain-Dev-Enhancement-Suite/blob/master/accessibility.js"></script>
+    
 
 
   <!-- Scroll Magic -->
@@ -152,8 +153,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js" integrity="sha256-+9YNuItWuR4sbqeaNiJOxG0BvptYz4fbUXbIZoH5Jwo=" crossorigin="anonymous"></script>
     
   <!-- Local Scripts -->
-    <script src="{{ '/js/analytics.js' | url }}"></script>
-    <script src="{{ '/js/script.js' | url }}"></script>
     <script src="{{ '/js/kvlt-framework.js' | url }}"></script>
+    <script src="{{ '/js/script.js' | url }}"></script>
+  
 
 </html>
