--- a/index.njk
+++ b/index.njk
@@ -11,7 +11,7 @@ eleventyNavigation:
 		<div class="main">
 			<div class="copy">
 				<div class="title">
-					<h1>The <span>Past</span> is <span>Alive</span></h1>
+					<h1>Necro Cult Zine</h1>
 				</div>
 				<div class="caption">
 					
