--- a/css/kvlt-modules/typography.css
+++ b/css/kvlt-modules/typography.css
@@ -74,7 +74,7 @@ TYPOGRAPHY
 
 	
 
-		********************************************
+		/********************************************
 
 		SPECIAL FX 
 		--search-fx
